add basic git commands

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
     <title>Comandos git</title>
 </head>
 <body>
  <h1>Comandos git</h1>
- <h2>Juan Mejia</h2>
+ <h2>comandos basicos</h2>
+ <ul>
+  <li>git add para agregar a starting</li>
+  <li>git commit -m para crear commit</li>
+ </ul>
 </body>
 </html>
