--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <mets charset "utf-8">
     <title>Comandos git</title>
 </head>
 <body>
@@ -10,6 +10,8 @@
  <ul>
   <li>git add para agregar a starting</li>
   <li>git commit -m para crear commit</li>
+  <li>git log muestra la bitacora</li>
+  <li>git init, muestra el estado</li>
  </ul>
 </body>
 </html>
