feat: add stylesheet miestilo.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <mets charset "utf-8">
+    <mets charset="utf-8">
+    <link rel="stylesheet" href="css/miestilo.css">
     <title>Comandos git</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
   <li>git add para agregar a starting</li>
   <li>git commit -m para crear commit</li>
   <li>git log muestra la bitacora</li>
-  <li>git init, muestra el estado</li>
+  <li>git init, muestra la bitacora</li>
  </ul>
 </body>
 </html>
