--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <mets charset="utf-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/miestilo.css">
     <title>Comandos git</title>
 </head>
@@ -11,8 +11,8 @@
  <ul>
   <li>git add para agregar a starting</li>
   <li>git commit -m para crear commit</li>
-  <li>git log muestra la bitacora</li>
-  <li>git init, muestra la bitacora</li>
+  <li>git log, muestra la bitacora</li>
+  <li>git init, muestra el estado</li>
  </ul>
 </body>
 </html>
