feat: agregue git push

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <li>git commit -m para crear commit</li>
   <li>git log, muestra la bitacora</li>
   <li>git init, muestra el estado</li>
+  <li>git checkout, cambia la rama</li>
+  <li>git push,subir cambios</li>
  </ul>
 </body>
 </html>
